--- a/task-2/android/AND101-01.md
+++ b/task-2/android/AND101-01.md
@@ -1,4 +1,4 @@
-<!-- (This is a comment) INSTRUCTIONS: Go through this page and fill out any **bolded** entries with their correct values.-->
+n<!-- (This is a comment) INSTRUCTIONS: Go through this page and fill out any **bolded** entries with their correct values.-->
 
 # AND101 Project 2 - Kotlin Debug-a-thon
 
